--- a/covid-19-lifestyle-report.html
+++ b/covid-19-lifestyle-report.html
@@ -355,9 +355,12 @@
 										</div>
 										</div>
 										<div class="p-4 text-center">
-											<div class="position-relative">
-												<img src="img/oto-platinum/diagr-blue.svg" alt="">
-												<span class="span">36.30%</span>
+											<div class="circle-progress">
+												<svg width="224" height="224" viewBox="0 0 224 224">
+													<circle class="progress-meter" cx="112" cy="112" r="101" stroke-width="22"/>
+													<circle class="progress-ing blue-square" cx="112" cy="112" r="101" stroke-width="22"/>
+												</svg>
+												<span class="progress-num"><span>36.30</span>%</span>
 											</div>
 										</div>
 										<div class="mx-4 mx-md-5 pb-3">
@@ -379,9 +382,12 @@
 										</div>
 										</div>
 										<div class="p-4 text-center">
-											<div class="position-relative">
-												<img src="img/oto-platinum/diagr-orange.svg" alt="">
-												<span class="span">7.80%</span>
+											<div class="circle-progress">
+												<svg width="224" height="224" viewBox="0 0 224 224">
+													<circle class="progress-meter" cx="112" cy="112" r="101" stroke-width="22"/>
+													<circle class="progress-ing orange-square" cx="112" cy="112" r="101" stroke-width="22"/>
+												</svg>
+												<span class="progress-num"><span>7.80</span>%</span>
 											</div>
 										</div>
 										<div class="mx-4 mx-md-5 pb-3">
