--- a/covid-19-genetic-report.html
+++ b/covid-19-genetic-report.html
@@ -44,8 +44,8 @@
 			<div class="container mb-5 mb-md-0">
 				<div class="row row-3">
 					<div class="col-md-8 col-lg-5">
-						<h3 class="mb-3 text-white">COVID-19 Report</h3>
-						<p class="fz-16 mb-4">COVID-19 (coronavirus disease 2019) is a severe, acute respiratory disease caused by infection with SARS-CoV 2. This viral outbreak began in a seafood market in Wuhan, China last December 2019, and, as of June 14, 2020, the World Health Organization reported 7,690,708 confirmed cases of COVID-19, including 427,630 deaths, globally.</p>
+						<h3 class="mb-3 text-white">COVID-19 Combined Genetics and Lifestyle Report</h3>
+						<p class="fz-16 mb-4">The COVID-19 Combined Genetics and Lifestyle report is a useful tool that combines the power of genetics and lifestyle to assess your risk of acquiring the coronavirus infection and your severity of the disease. It includes assessing your DNA for genetic markers and evaluating your lifestyle with factors such as sex, age, personal practices and current health status that may influence your risks associated to COVID-19.</p>
 						<div class="optimize optimize-4 optimize-5">
 							<div class="opt-5-inside">
 								<div class="row row-2">
@@ -94,8 +94,8 @@
 					</div>
 				</div>
 
-				<ul class="nav nav-main justify-content-center mt-3">
-					<li class="nav-item fz-20">
+				<ul class="nav nav-main nav-main-5 justify-content-center mt-3">
+					<li class="nav-item">
 						<a class="nav-link active py-3" data-toggle="pill" href="#pills-home">
 							<svg class="mb-1" xmlns="http://www.w3.org/2000/svg" fill="none" width="14.292" height="16.333" viewBox="0 0 14.292 16.333">
     						<path class="path" d="M0 15.762a.509.509 0 0 0 .507.568h1.03a.513.513 0 0 0 .51-.443c.022-.156.057-.354.108-.577h9.963c.051.22.093.421.112.577a.51.51 0 0 0 .51.443h1.03a.507.507 0 0 0 .507-.568 10.456 10.456 0 0 0-3.793-6.626 16.61 16.61 0 0 1-1.866 1.129c.2.147.364.3.542.453H5.094A12.344 12.344 0 0 1 7.6 9.079C13.1 6.351 14.1 2.1 14.288.571A.509.509 0 0 0 13.781 0h-1.034a.513.513 0 0 0-.51.443c-.022.156-.057.354-.108.577H2.163C2.112.8 2.076.6 2.054.443A.51.51 0 0 0 1.544 0H.513A.511.511 0 0 0 0 .571a10.76 10.76 0 0 0 5.1 7.6A10.771 10.771 0 0 0 0 15.762zm7.146-8.757a12.152 12.152 0 0 1-2.052-1.39h4.1a11.809 11.809 0 0 1-2.048 1.39zm4.182-3.943a8.993 8.993 0 0 1-.67 1.021H3.636a8.2 8.2 0 0 1-.67-1.021zM2.963 13.271a8.994 8.994 0 0 1 .67-1.021h7a8.666 8.666 0 0 1 .676 1.021z" transform="translate(.001)"/>
@@ -103,12 +103,29 @@
 							<span>DNA</span>
 						</a>
 					</li>
-					<li class="nav-item fz-20">
+					<li class="nav-item">
 						<a class="nav-link py-3" data-toggle="pill" href="#pills-profile">
 							<svg class="mb-1" xmlns="http://www.w3.org/2000/svg" fill="none" width="15.683" height="17.129" viewBox="0 0 15.683 17.129">
 						    <path class="path" d="M64.852 114.5a2.141 2.141 0 1 0 2.141 2.141 2.141 2.141 0 0 0-2.141-2.141zm0 5.712h-.076a5.225 5.225 0 0 0-.785.069 3.7 3.7 0 0 0-2.784 2.249l-1.2 2.868-2.607 1.312a.714.714 0 0 0 .636 1.278l2.855-1.428a.7.7 0 0 0 .341-.363l.77-1.85v3.107l-2.26 1.6a1.423 1.423 0 0 0-.507 1.658 1.494 1.494 0 0 0 1.414.917h1.489a1.911 1.911 0 0 1 .429-2.063 2.116 2.116 0 0 1 1.733-.789 1.789 1.789 0 0 1 .558.113c.127.043 2.365.753 2.365.753l-3.133.561a.713.713 0 0 0 .054 1.424h5a1.343 1.343 0 0 0 1.207-.914.7.7 0 0 0 .212-.505 1.416 1.416 0 0 0-.6-1.156l-2.257-1.6v-3.107l.77 1.85a.712.712 0 0 0 .337.363l2.855 1.428a.715.715 0 1 0 .641-1.278l-2.617-1.309-1.2-2.868a3.7 3.7 0 0 0-2.782-2.249 5.3 5.3 0 0 0-.792-.069z" transform="translate(-57.021 -114.5)"/>
 							</svg>
 							<span>Lifestyle</span>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link py-3" data-toggle="pill" href="#pills-lifestyle">
+							<svg class="mb-1" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+							    <g transform="translate(4.719)">
+						        <g>
+					            <path class="path" d="M148.173 0a6.236 6.236 0 0 0-6.048 4.719 6.237 6.237 0 0 1 7.562 7.562A6.234 6.234 0 0 0 148.173 0z" transform="translate(-142.125)"/>
+						        </g>
+							    </g>
+							    <g transform="translate(0 4.719)">
+						        <g>
+					            <path class="path" d="M10.767 149.873a6.237 6.237 0 0 1-6.048-7.748 6.234 6.234 0 1 0 7.562 7.562 6.246 6.246 0 0 1-1.514.186z" transform="translate(0 -142.125)"/>
+						        </g>
+							    </g>
+							</svg>
+							<span>DNA + Lifestyle</span>
 						</a>
 					</li>
 				</ul>
@@ -386,7 +403,7 @@
 													<circle class="progress-meter" cx="112" cy="112" r="101" stroke-width="22"/>
 													<circle class="progress-ing orange-square" cx="112" cy="112" r="101" stroke-width="22"/>
 												</svg>
-												<span class="progress-num"><span>7.80</span>%</span>
+												<span class="progress-num"><span>50</span>%</span>
 											</div>
 										</div>
 										<div class="mx-4 mx-md-5 pb-3">
@@ -418,12 +435,151 @@
 							</div>	
 						</div>
 					</div>
+
+					<div class="tab-pane fade" id="pills-lifestyle">
+
+						<div class="row mb-3 pt-md-4">
+							<div class="col-md-6 mb-3 pb-md-3">
+								<div class="card card-2">
+									<div class="row h-100">
+										<div class="col-auto">
+											<img src="img/disease/12.svg" alt="">
+										</div>
+										<div class="col pl-0 d-flex flex-column">
+											<h6>Predisposition to Coronavirus Infection</h6>
+											<div class="stars stars-sm">
+												<span class="star"></span>
+											</div>
+											<p class="fz-14">Your Likelihood of Infection</p>
+											<div class="progress-text">LOW</div>
+											<div class="progress">
+											  <div class="progress-bar bg-success" style="width: 15%"></div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 mb-3 pb-md-3">
+								<div class="card card-2">
+									<div class="row h-100">
+										<div class="col-auto">
+											<img src="img/disease/13.svg" alt="">
+										</div>
+										<div class="col pl-0 d-flex flex-column">
+											<h6>Infection Severity</h6>
+											<div class="stars stars-sm">
+												<span class="star"></span>
+											</div>
+											<p class="fz-14">Your Reaction to Infection</p>
+											<div class="progress-text">INTERMEDIATE</div>
+											<div class="progress">
+											  <div class="progress-bar bg-success" style="width: 60%"></div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="row pt-3 mb-5">
+							<div class="col-md-5 fz-18">
+								The Below Traits are Only Based On Your Genetics and are Not Impacted By Your Lifestyle
+							</div>
+						</div>
+						<div class="row mb-3">
+							<div class="col-md-6 col-xl-4 mb-3 pb-md-3">
+								<div class="card card-2">
+									<div class="row h-100">
+										<div class="col-auto">
+											<img src="img/disease/14.svg" alt="">
+										</div>
+										<div class="col pl-0 d-flex flex-column">
+											<h6>Response to Oseltamivir</h6>
+											<div class="stars stars-sm">
+												<span class="star"></span>
+											</div>
+											<p class="fz-14">Antiviral Drug</p>
+											<div class="progress-text">INTERMEDIATE</div>
+											<div class="progress">
+											  <div class="progress-bar bg-success" style="width: 60%"></div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 col-xl-4 mb-3 pb-md-3">
+								<div class="card card-2">
+									<div class="row h-100">
+										<div class="col-auto">
+											<img src="img/disease/16.svg" alt="">
+										</div>
+										<div class="col pl-0 d-flex flex-column">
+											<h6>Reaction to Chloroquine</h6>
+											<div class="stars stars-sm">
+												<span class="star star2"></span>
+												<span class="star star2"></span>
+												<span class="star star2"></span>
+											</div>
+											<p class="fz-14">Malaria Treatment</p>
+										</div>
+									</div>
+									<p class="fz-24 font-weight-bold text-gray-coming text-center">Coming Soon</p>
+								</div>
+							</div>
+							<div class="col-md-6 col-xl-4 mb-3 pb-md-3">
+								<div class="card card-2">
+									<div class="row h-100">
+										<div class="col-auto">
+											<img src="img/disease/17.svg" alt="">
+										</div>
+										<div class="col pl-0 d-flex flex-column">
+											<h6>Response to Hydroxychloroquine</h6>
+											<div class="stars stars-sm">
+												<span class="star star2"></span>
+											</div>
+											<p class="fz-14">Side Effects &amp; Risk</p>
+										</div>
+									</div>
+									<p class="fz-24 font-weight-bold text-gray-coming text-center">Coming Soon</p>
+								</div>
+							</div>
+							<div class="col-md-6 col-xl-4 mb-3 pb-md-3">
+								<div class="card card-2">
+									<div class="row h-100">
+										<div class="col-auto">
+											<img src="img/disease/18.svg" alt="">
+										</div>
+										<div class="col pl-0 d-flex flex-column">
+											<h6>Response to Lopinavir</h6>
+											<div class="stars stars-sm">
+												<span class="star star2"></span>
+											</div>
+											<p class="fz-14">HIV Drug</p>
+										</div>
+									</div>
+									<p class="fz-24 font-weight-bold text-gray-coming text-center">Coming Soon</p>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 
-				<div class="notif fz-14">
+				<div class="notif notif-3 fz-14">
 					<div class="row justify-content-center">
 						<div class="col-xl-8 px-xl-5">
-							* This report does not diagnose, treat, or cure COVID-19, nor does it offer any cures or solutions for the virus. All genes and variants included in the report are based on the previous SARS, MERS, and other flu outbreak and preliminary research available to date on the current COVID-19 outbreak. 
+							<div class="pb-3">This report does not diagnose, treat, or cure COVID-19, nor does it offer any cures or solutions for the virus. The genetic factors are based on well-studied and published genes and polymorphisms based on previous SARS, MERS, flu outbreaks and preliminary scientific research available to date on the current COVID-19 outbreak.</div>
+							<div class="collapse-bottom collapse">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolore, rerum obcaecati libero a sit odit, iure tempora! Corrupti sint commodi iste, accusamus neque optio cum, placeat. Sit, delectus ipsum.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis maxime non fugit obcaecati, cupiditate corrupti quod natus rem at, in ratione omnis ab porro. Iste nobis error sit quia sunt.</p>
+								<div class="pt-2">
+									<a href=".collapse-bottom" data-toggle="collapse">Read less<img src="img/arrow-right-black.svg" alt="" width="5" class="ml-2"></a>
+								</div>
+							</div>
+							<div class="collapse-bottom collapse show">
+								<div class="pt-2">
+									<a href=".collapse-bottom" data-toggle="collapse">Read more<img src="img/arrow-right-black.svg" alt="" width="5" class="ml-2"></a>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
