--- a/FAQs-covid-19-report-main.html
+++ b/FAQs-covid-19-report-main.html
@@ -19,10 +19,10 @@
 			</div>
 		</nav>
 
-		<section class="section">
+		<section class="section pb-5">
 			<div class="container">
 				<h3 class="fz-32 mb-4 text-center">Frequently Asked Questions</h3>
-				<div class="row justify-content-center no-gutters pt-3">
+				<div class="row justify-content-center no-gutters pt-3 mb-4">
 					<div class="col-lg-9">
 						<div class="accordion-main">
 							<div class="card card-test py-0 item-main">
@@ -167,6 +167,93 @@
 				        </div>
 			        </div>
 		        </div>
+					</div>
+				</div>
+				<div class="pt-2">
+					<hr>
+				</div>
+				<h4 class="pt-5 text-center">Ready to Unlock Your Carrier Report?</h4>
+				<p class="text-center fz-16">Join our Platinum Membership now to unlock all of your exclusive reports and benefits</p>
+				<h5 class="pt-3 fz-20 mb-5 text-center">Select Your Preferred Plan</h5>
+				<div class="row align-items-end justify-content-center">
+					<div class="col-md-6 col-lg-5 col-xl-4 mb-5">
+						<div class="card card-card card-orange card-orange-3">
+							<div class="fz-24 text-black font-weight-bold mb-1">Quarterly Plan</div>
+							<div class="bg-bg fz-45 text-black mb-4">$8<span class="fz-18 text-gray ml-1">/month</span></div>
+							<ul class="list-check list-check-2 list-check-3 d-inline-block text-left pb-4">
+								<li class="mb-2">1-on-1 consultation.</li>
+								<li class="mb-2">Unlimited updates.</li>
+								<li class="mb-2">FREE additional traits</li>
+								<li class="mb-2">Disease Report - unlock instantly!</li>
+								<li class="mb-2">Carrier Trait Report - available now.</li>
+								<li class="mb-2">FREE COVID-19 Report.</li>
+								<li class="mb-2">FREE membership to our exclusive community.</li>
+								<li class="mb-2">FREE subscription to the LifeDNA Genomics Newsletter.</li>
+								<li class="mb-2">FREE access to the LifeDNA Nutrition App (coming soon!)</li>
+								<li class="mb-2">VIP customer service.</li>
+								<li class="mb-2">No commitment.</li>
+								<li class="mb-2 font-weight-bold">Quarterly payments.</li>
+							</ul>
+							<button class="btn btn-success btn-block fz-16 py-2">Join Now</button>
+							<div class="row justify-content-center mt-4">
+								<div class="col-11 fz-13">*By clicking the button you will be charged <b>$25 quarterly.</b></div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 col-lg-5 col-xl-4 mb-5">
+						<div class="most-pop-2 most-pop-3">MOST POPULAR</div>
+						<div class="card card-card card-orange card-orange-3">
+							<div class="fz-24 text-black font-weight-bold mb-1">Yearly Plan</div>
+							<div class="bg-bg fz-45 text-black mb-4">$5<span class="fz-18 text-gray ml-1">/month</span></div>
+							<ul class="list-check list-check-2 list-check-3 d-inline-block text-left pb-4">
+								<li class="mb-2">1-on-1 consultation.</li>
+								<li class="mb-2">Unlimited updates.</li>
+								<li class="mb-2">FREE additional traits</li>
+								<li class="mb-2">Disease Report - unlock instantly!</li>
+								<li class="mb-2">Carrier Trait Report - available now.</li>
+								<li class="mb-2">FREE COVID-19 Report.</li>
+								<li class="mb-2">FREE membership to our exclusive community.</li>
+								<li class="mb-2">FREE subscription to the LifeDNA Genomics Newsletter.</li>
+								<li class="mb-2">FREE access to the LifeDNA Nutrition App (coming soon!)</li>
+								<li class="mb-2">VIP customer service.</li>
+								<li class="mb-2">No commitment.</li>
+								<li class="mb-2 font-weight-bold">Save $48 a year!</li>
+							</ul>
+							<button class="btn btn-success btn-block fz-16 py-2">Join Now</button>
+							<div class="row justify-content-center mt-4">
+								<div class="col-11 fz-13">*By clicking the button you will be charged <b>$60 yearly.</b></div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 col-lg-5 col-xl-4 mb-5">
+						<div class="most-pop-2">LIMITED TIME OFFER</div>
+						<div class="card card-card card-orange card-orange-3">
+							<div class="fz-24 text-black font-weight-bold mb-1">Lifetime Plan</div>
+							<div class="bg-bg fz-45 text-black mb-4">$199</div>
+							<ul class="list-check list-check-2 list-check-3 d-inline-block text-left pb-4">
+								<li class="mb-2">1-on-1 consultation.</li>
+								<li class="mb-2">Unlimited updates.</li>
+								<li class="mb-2">FREE additional traits</li>
+								<li class="mb-2">Disease Report - unlock instantly!</li>
+								<li class="mb-2">Carrier Trait Report - available now.</li>
+								<li class="mb-2">FREE COVID-19 Report.</li>
+								<li class="mb-2">FREE membership to our exclusive community.</li>
+								<li class="mb-2">FREE subscription to the LifeDNA Genomics Newsletter.</li>
+								<li class="mb-2">FREE access to the LifeDNA Nutrition App (coming soon!)</li>
+								<li class="mb-2">VIP customer service.</li>
+								<li class="mb-2">Lifetime membership.</li>
+								<li class="mb-2 font-weight-bold">Save $60 a year!</li>
+							</ul>
+							<button class="btn btn-success btn-block fz-16 py-2">Join Now</button>
+							<div class="row justify-content-center mt-4">
+								<div class="col-11 fz-13">*By clicking the button you will be charged <b>$199.</b></div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row justify-content-center">
+					<div class="col-auto">
+						<a href="#!" class="no-thanks"><u>No thanks.</u></a>
 					</div>
 				</div>
 			</div>
